--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <p id="email">Email: <a href="mailto:email@yoursite.com? subject=Let's%20Connect!"><strong>email@yoursite.com</strong></a></p>
             </div>
 
-           <div class="main-footer">
+           <div class="main-footer" id="below">
               <div class="name">
                 <h4>Student Name</h4>
                    </div>
