--- a/index.html
+++ b/index.html
@@ -105,16 +105,21 @@
     <footer id="center">
         <div class="contact">
             <h4 class="detail">CONTACT</h4>
-              <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+              <p class="footer-p">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
               <p id="phone">Phone: <a href="tel:+1(111)555-1234"><strong>+1(111)555-1234</strong></a> </p>
               <p id="email">Email: <a href="mailto:email@yoursite.com? subject=Let's%20Connect!"><strong>email@yoursite.com</strong></a></p>
             </div>
 
            <div class="main-footer" id="below">
-              <div class="name">
+              <div class="bot-name">
                 <h4>Student Name</h4>
+               </div>
+               <div class="back">
+                  <ul>
+                    <li><a href="#back-to-top">BACK TO TOP</a></li>
+                      </ul>
                    </div>
-                <nav class="main-nav">
+                <nav class="main-nav" id='footer-nav'>
                   <ul class="main-nav">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
